Bug 1255705 - Add some useful logging that can be enabled at compile time. r=botond

MozReview-Commit-ID: KgjQMlY09Mn